<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        android:visible="true"
        app:showAsAction="always">

        <menu>
            <group
                android:id="@+id/menu_sort_group"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/menu_sort_popularity"
                    android:checked="true"
                    android:title="@string/most_popular" />

                <item
                    android:id="@+id/menu_sort_top_rated"
                    android:title="@string/top_rated" />

                <item
                    android:id="@+id/menu_sort_favourite"
                    android:title="@string/favourite" />
            </group>
        </menu>

    </item>

</menu>