<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.vinhphuc.udacitypopularmovies.DetailActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="300dp"
        android:orientation="horizontal"
        android:weightSum="6">

        <ImageView
            android:id="@+id/imageview_poster"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:contentDescription="@string/description_movie_poster"
            android:src="@drawable/example_movie_poster" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingEnd="2dp"
            android:paddingLeft="5dp"
            android:paddingRight="2dp"
            android:paddingStart="5dp">

            <TextView
                android:id="@+id/textview_release_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heading_release_date"
                android:textStyle="italic"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <TextView
                android:id="@+id/textview_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="2dp"
                android:paddingEnd="2dp"
                android:text="@string/example_release_date"
                android:textSize="@dimen/abc_text_size_large_material" />

            <TextView
                android:id="@+id/textview_vote_average_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/heading_vote_average"
                android:textStyle="italic"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <TextView
                android:id="@+id/textview_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="2dp"
                android:paddingEnd="2dp"
                android:text="@string/example_vote_average"
                android:textStyle="bold"
                android:textSize="@dimen/abc_text_size_large_material" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textview_original_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"
            android:text="@string/example_original_title"
            android:textStyle="bold"
            android:textSize="@dimen/abc_text_size_headline_material" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_overview" />

        </ScrollView>
    </LinearLayout>
</LinearLayout>
